WIP: Addition of graphql resolvers
